scss/layouts/_hero-section.scss
.hero-section {
  background-image: url(../images/bck-modal.png);
  background-repeat: no-repeat;
  background-size: 100% 100%;
  background-position: top center;

  @media screen and (min-width: $bp-desktop) {
    position: relative;
    padding: 122px 0px 126px;
    background-image: url(../images/BCK.png);
    background-repeat: no-repeat no-repeat;
    background-size: 100% 100%;
    background-position: top center;
  }
  &__content {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    padding: 25px 0px 56px;
    @media screen and (min-width: $bp-desktop) {
      width: 530px;
      margin-left: 110px;
      align-items: flex-start;
      text-align: left;
      margin-top: 16px;
    }
  }

  &__accent {
    color: var(--primary-color-blue);
    font-family: "Play", sans-serif;
    text-transform: capitalize;
    font-size: 54px;
    font-weight: 700;
    line-height: 1.17;
    width: 330px;
    margin-bottom: 32px;
    @media screen and (min-width: $bp-desktop) {
      font-size: 140px;
      line-height: 0.8;
      width: 100%;
      max-width: 530px;
      margin-bottom: 40px;
      word-spacing: 100vw;
    }
  }

  &__advice {
    color: var(--secondary-color-gray);
    font-size: 11px;
    line-height: 1.16;
    width: 186px;
    text-align: center;

    @media screen and (min-width: $bp-desktop) {
      color: var(--secondary-color-gray);
      line-height: 1.5;
      width: 238px;
      font-size: 12px;
      font-weight: 400;
      margin-left: 16px;
      text-align: leftit;
    }
  }
  &__text {
    font-size: 12px;
    margin-top: 56px;

    @media screen and (min-width: $bp-desktop) {
      font-size: 16px;
      margin-top: 0;
    }
  }
}

